UI issue: horizontal scroll on main page

--- a/themes/modern/assets/css/section-main-landing.css
+++ b/themes/modern/assets/css/section-main-landing.css
@@ -1,6 +1,7 @@
 .section-main-landing {
   min-height: calc(100vh - var(--desktopMenuHeight));
   margin-left: calc(100vw / 2 - var(--contentWidth) / 2);
+  width: initial;
   display: flex;
   flex: 1;
 }
